--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
-  "name": "test-esri",
+  "name": "gen-wim-dev",
   "version": "0.0.1",
   "dependencies": {
-  	 "jquery": "^2.1.3",	
+  	 "jquery": "^2.1.3",
+     "fontawesome": "^4.3.0",
   	 "bootstrap": "latest",
 	   "bootstrap-sidebar" : "^0.2.0"
   	 
